--- a/views/admin/offerManagement.ejs
+++ b/views/admin/offerManagement.ejs
@@ -120,7 +120,7 @@
                         <h2 class="content-title card-title">Offers</h2>
                     </div>
                     <div>
-                        <a href="/admin/addOffer" class="btn btn-primary btn-sm rounded">Create new</a>
+                        <a href="/admin/addOffer" class="btn btn-primary btn-sm rounded">Add Category offer</a>
                     </div>
                 </div>
                 <div class="card mb-4">
@@ -143,6 +143,10 @@
                     </div> <!-- card-body end// -->
                 </div> <!-- card end// -->
 
+                <hr style="height: 10px; background-color: #088178;opacity: 100;">
+                <div style="display: flex; justify-content: end; margin-bottom: 30px;">
+                    <a href="/admin/addOffer" class="btn btn-primary btn-sm rounded">Add Product offer</a>
+                </div>
                 <div class="card mb-4">
                    
                     <div class="card-body">
