--- a/views/user/userorderdetails.ejs
+++ b/views/user/userorderdetails.ejs
@@ -646,7 +646,7 @@
                                             <tbody>
                                                 <tr>
                                                     <td class="cart_total_label">Order Total</td>
-                                                    <td class="cart_total_amount"><span class="font-lg fw-900 text-brand">₹<%=sum%></span></td>
+                                                    <td class="cart_total_amount"><span class="font-lg fw-900 text-brand">₹<%=order.totalAmount%></span></td>
                                                 </tr>
                                                 <tr>
                                                     <td class="cart_total_label">Shipping</td>
