--- a/views/admin/adminDashboard.ejs
+++ b/views/admin/adminDashboard.ejs
@@ -133,7 +133,7 @@
                     <p>Whole data about your business here</p>
                 </div>
                 <div>
-                    <a href="/admin/createreport" class="btn btn-primary"><i class="text-muted material-icons md-post_add"></i>Create report</a>
+                    <a href="/admin/report" class="btn btn-primary"><i class="text-muted material-icons md-post_add"></i>View report</a>
                 </div>
             </div>
             <div class="row">
